# bluetooth-monitor

./: .gitignore  CHANGELOG.md  CONTRIBUTORS.md  Cargo.toml  DESIGN_SYSTEM.md  LICENSE  Makefile  README.md  SECURITY.md  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: index.html
mockups/: 01-aurora.html  02-nova.html  03-command.html  04-radiant.html  index.html
packaging/: bluetooth-monitor.desktop
src/: autostart.rs  bluetooth.rs  config.rs  fonts.rs  main.rs  theme.rs  tray.rs  ui.rs  xiaomi_mma.rs
src/vendors/: apple.rs  mod.rs  samsung.rs  xiaomi.rs
