[package]
name = "bluetooth-monitor"
version = "0.1.0"
edition = "2021"
description = "Live Bluetooth device dashboard (battery, signal, connect/disconnect) with tray icon"

[dependencies]
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.28"
egui_extras = { version = "0.28", features = ["image"] }
image = { version = "0.25", features = ["png"] }
bluer = { version = "0.17", features = ["bluetoothd", "rfcomm"] }
hex = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "net", "process"] }
anyhow = "1"
ksni = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
futures = "0.3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
